- Fix svg path - Fix send button styles

--- a/public/style.css
+++ b/public/style.css
@@ -82,11 +82,12 @@ body {
   justify-content: center;
   border-radius: 50%;
   cursor: pointer;
-  color: #e0e0e0;
+  color: black;
+  background-color: white;
 }
 
 #send-button:hover {
-  background-color: #444;
+  opacity: 0.7;
 }
 
 #stop-button {
